fix: change paddings in footer for better  readability

--- a/src/styles/adaptive.scss
+++ b/src/styles/adaptive.scss
@@ -311,6 +311,12 @@
         line-height: 69px;
     }
 }
+.footer__lic {
+    margin-top: 130px;
+}
+.footer__links {
+    margin-top: 70px;
+}
 .marquee__container {
     padding: 20px;
 }
